<resources>
    <string name="app_name">Valium Tavor Serenase</string>
    <string name="title_activity_games">games</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="player1">Player 1: 0</string>
    <string name="player2">Player 2: 0</string>
    <string name="reset">Reset</string>

    <string name="txtNome">Nome</string>
    <string name="txtCognome">Cognome</string>
    <string name="txtMail">Mail</string>
    <string name="txtMatricola">Matricola</string>
    <string name="btnStampa">Stampa</string>

    <string name="titolo1activity">CARICA UTENTE</string>
    <string name="nome">NOME</string>
    <string name="cognome">COGNOME</string>
    <string name="telefono">TELEFONO</string>
    <string name="salva">SALVA</string>
    <string name="button2">APRI CERCA</string>
    <string name="cerca">INSERISCI COGNOME</string>
    <string name="btnCerca">CERCA TELEFONO</string>
    <string name="btnElimina">ELIMINA TELEFONO</string>

    <string name="btnConnetti">Connetti</string>
    <string name="btnDisconnetti">Disconnetti</string>
</resources>