<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnagraficaStudenteActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="Nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Cognome"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtCognome"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Mail"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtMail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Matrciola"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtMatricola"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtNome"
        app:layout_constraintStart_toStartOf="@+id/txtCognome"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="2dp" />

    <EditText
        android:id="@+id/txtCognome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtCognome"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/txtNome"
        android:layout_marginLeft="19dp" />

    <EditText
        android:id="@+id/txtMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtMail"
        app:layout_constraintStart_toStartOf="@+id/txtCognome"
        app:layout_constraintTop_toBottomOf="@+id/txtCognome"
        android:layout_marginLeft="2dp" />

    <Button
        android:id="@+id/btnStampa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="131dp"
        android:layout_marginBottom="81dp"
        android:text="@string/btnStampa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="131dp" />

    <EditText
        android:id="@+id/txtMatricola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtMatricola"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/txtMail"
        android:layout_marginLeft="21dp" />
</androidx.constraintlayout.widget.ConstraintLayout>